--- a/AutoClick/Pages/Shared/Components/CarruselPublicidad/Default.cshtml
+++ b/AutoClick/Pages/Shared/Components/CarruselPublicidad/Default.cshtml
@@ -143,6 +143,11 @@
         max-width: 100%;
     }
 
+    .ad-carousel-horizontal[data-seccion="destacados-banner"],
+    .ad-carousel-horizontal[data-seccion="destacados-footer"] {
+        max-width: 100% !important;
+    }
+
     .ad-carousel-medio-vertical {
         width: 100%;
         max-width: 401px;
