--- a/AutoClick/Pages/RegistroAgencia.cshtml
+++ b/AutoClick/Pages/RegistroAgencia.cshtml
@@ -46,7 +46,7 @@
         }
 
         .header-logo img {
-            height: 40px;
+            height: 32px !important;
         }
 
         .back-home-btn {
@@ -140,11 +140,12 @@
         .form-row {
             display: flex;
             gap: 16px;
-            margin-bottom: 16px;
+            margin-bottom: 20px;
         }
 
         .form-group {
             flex: 1;
+            margin-bottom: 20px;
         }
 
         .form-group.full-width {
