--- a/AutoClick/Pages/Shared/_Footer.cshtml
+++ b/AutoClick/Pages/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 <!-- Footer Universal -->
-<div style="width: 100%; height: 340px; background: #030D2B; overflow: visible; border-top: 0.50px rgba(255, 255, 255, 0.45) solid; position: relative; padding-bottom: 20px;">
+<div style="width: 100%; min-height: 340px; background: #030D2B; overflow: visible; border-top: 0.50px rgba(255, 255, 255, 0.45) solid; position: relative; padding-bottom: 20px;">
     <div style="left: 444.50px; top: 45px; position: absolute; justify-content: center; align-items: flex-start; gap: 62px; display: inline-flex">
         <div style="width: 193px; height: 173px; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: inline-flex">
             <div style="align-self: stretch; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 40px; display: inline-flex">
@@ -38,12 +38,25 @@
     </div>
 
     <!-- Logo de AutoClick -->
-    <div style="width: 289px; height: 143px; left: 40px; top: 40px; position: absolute; flex-direction: column; justify-content: center; align-items: flex-start; gap: 32px; display: inline-flex">
+    <div style="width: 289px; left: 40px; top: 40px; position: absolute; display: flex; flex-direction: column; gap: 32px; align-items: flex-start;">
         <!-- Logo principal de AutoClick -->
-        <div style="width: 100%; aspect-ratio: 4096/650; position: relative;">
+        <div style="width: 100%; position: relative;">
             <img src="https://autoclickstorage.blob.core.windows.net/logos/LOGOS%20AUTOCLICK-04.png" 
                  alt="AutoClick.cr Logo" 
-                 style="width: 100%; height: 100%; object-fit: contain; object-position: left;" />
+                 style="width: 100%; height: auto; display: block;" />
+        </div>
+        
+        <!-- Iconos de Redes Sociales -->
+        <div style="display: flex; gap: 48px; align-items: center; width: 100%; justify-content: flex-start;">
+            <a href="https://www.facebook.com/profile.php?id=61578327757688" target="_blank" rel="noopener noreferrer" style="display: block;">
+                <img src="~/images/icons/FacebookIcon.svg" alt="Facebook" style="width: 32px; height: 32px; display: block;" />
+            </a>
+            <a href="https://wa.me/50671052418" target="_blank" rel="noopener noreferrer" style="display: block;">
+                <img src="~/images/icons/WhatsappIcon.svg" alt="WhatsApp" style="width: 32px; height: 32px; display: block;" />
+            </a>
+            <a href="https://www.instagram.com/autoclick.cr/" target="_blank" rel="noopener noreferrer" style="display: block;">
+                <img src="~/images/icons/InstagramIcon.svg" alt="Instagram" style="width: 32px; height: 32px; display: block;" />
+            </a>
         </div>
     </div>
 
